# phase0-math-probability-toolkit

./: .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: tests.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  future_integration_notes.md  phase0_formula_sheet.md  project_explanation.md
examples/: anomaly_detection_demo.py  bayes_demo.py  decompositions_demo.py  linear_algebra_demo.py  monte_carlo_demo.py  optimization_demo.py  portfolio_demo.py  probability_demo.py
math_toolkit/: bayes.py  decompositions.py  linear_algebra.py  monte_carlo.py  multivariate_gaussian.py  optimization.py  portfolio_risk.py  probability.py
tests/: test_bayes.py  test_decompositions.py  test_extra_edge_cases.py  test_linear_algebra.py  test_monte_carlo.py  test_multivariate_gaussian.py  test_optimization.py  test_portfolio_risk.py  test_probability.py
